Various doc review mods

--- a/todo.txt
+++ b/todo.txt
@@ -49,3 +49,5 @@ particles
 - or similar to vertex?
 - start/end size => vertex attribute
 - low/high fade, when particles start to fade, high = lifetime
+
+W32APITypeMapper
