Rotation refactor redux
Simplified axis-angle to record
Mutable rotation is now separate implementation
Selection of algorithm moved to mutable class
Reintroduced toAxisAngle() to rotation interface
Removed pointless isMutable() from Transform
TODO - still need better way to incorporate Cosine function

--- a/todo.txt
+++ b/todo.txt
@@ -32,7 +32,8 @@ features todo
 - mesh shader
 - dynamic descriptors sets and uniform buffers (?)
 - OpenAL streaming audio (queue)
-https://github.com/kcat/openal-soft/wiki/Programmer%27s-Guide#queuing-buffers-on-a-source
+- https://github.com/kcat/openal-soft/wiki/Programmer%27s-Guide#queuing-buffers-on-a-source
+- memory region rounding if not host coherent
 
 blog
 - pipeline cache
