--- a/todo.txt
+++ b/todo.txt
@@ -6,6 +6,12 @@ review use of cosine
 add debug support for the create instance call
 https://vulkan-tutorial.com/Drawing_a_triangle/Setup/Validation_layers
 
+VkDebugUtilsMessengerCallbackData
+sType is final => need code in FieldMapping to skip final fields (nasty?)
+better to omit final fields altogether in the structure factory => more work
+or just get rid of final structure fields (are there any others) => no more problem
+also means generator does not need to discover/inject final modifier (can it do this anyway?) 
+
 -------------------------------
 
 demo
