Key table revamp
Added checks for device listener bind/remove
Refactored key table for better flexibility
Added loader class
Also added map() helper

--- a/todo.txt
+++ b/todo.txt
@@ -12,6 +12,8 @@ README.md
 - summary
 - link to blog
 
+devices are public - could lead to multiple binds for same callback-listener! => enforce max one per window?
+
 -------------------------------
 
 demo
