--- a/todo.txt
+++ b/todo.txt
@@ -6,11 +6,9 @@ review use of cosine
 add debug support for the create instance call
 https://vulkan-tutorial.com/Drawing_a_triangle/Setup/Validation_layers
 
-is the diagnostics stuff now part of the API proper?
-since 1.2?
-reuse callback stuff? or too complicated? (esp since returns structures, enums, etc)
+diagnostics handler:
+integrate with callback stuff (or too complicated? esp since returns structures, enums, etc)
 update blog? i.e. dumps messages to console by default
-
 VkDebugUtilsMessengerCallbackDataEXT
 3 x returned arrays -> unsupported!
 call back is OK but structure cannot be unmarshalled
