Format selection refactor
Introduced general priority selector
Refactored selection logic accordingly
Renamed format selector -> filter

--- a/todo.txt
+++ b/todo.txt
@@ -14,25 +14,12 @@ also injects superfluous padding
 blog
 - mesh loader very slow with scanner ~20s -> 2s custom
 
-format selector could do with simplifying, see ModelDemo/DepthAttachment
-
-mesh loader still needs custom indexed implementation
-
-can we use same/similar mechanism as mesh loader output file when buffering a mesh?
-but one that can be converted to/from bytes more easily? i.e. rather than dodgy order() hack? 
+mesh loader: 1. still needs custom indexed implementation, 2. nasty ByteBuffer fiddle when writing
 
 helper for 'wrappers' that are not native objects (i.e. not destroyed) but compose and optionally destroy their dependencies?
 e.g. VertexBuffer, View
 
 we would want to configure pipeline stage from YAML like files, fluid builder less important (?)
-
-OBJ group probably not right
-- separate lookup tables for VNT and actual JOVE models
-- s/o/g start a new JOVE model NOT the overall OBJ model
-- does it actually do this?
-- its certainly VERY slow
-
-consider physical device + queue family pair, convenience record -> selectors, vulkan surface
 
 add debug support for the create instance call
 https://vulkan-tutorial.com/Drawing_a_triangle/Setup/Validation_layers
