Refactor pass for orbital controller
Devices now cache the callback
Added isBound()
Factored out sphere normal factory -> geometry
Tidied up controllers
Moved key table
Added singleton instance (provisional)
Moved default file to resources
Device constructors package-private
Added instances & accessors to window
Cleaned up interpolator

--- a/todo.txt
+++ b/todo.txt
@@ -11,6 +11,10 @@ also injects superfluous padding
 
 **********
 
+VulkanObject/Transient(?)
+- equals comparing handle? device?
+- no need for custom, e.g. VulkanSemaphore
+
 what is an descriptor set array used for?
 https://docs.vulkan.org/samples/latest/samples/performance/descriptor_management/README.html
 
