Review cleanup prior to blog revision

--- a/todo.txt
+++ b/todo.txt
@@ -1,22 +1,18 @@
 **********
-
 generator for primitive arrays -> need to be handles?
-
 VkShaderModuleCreateInfo::pCode
 VkSubmitInfo::pWaitDstStageMask
 VkSpecializationInfo::pData
 VkDebugUtilsMessengerCallbackDataEXT
-
 also injects superfluous padding
-
 **********
+
+blog - add section for minimised/closed windows ~ callbacks, recreation
 
 what is an descriptor set array used for?
 https://docs.vulkan.org/samples/latest/samples/performance/descriptor_management/README.html
 
 mesh loader: 1. still needs custom indexed implementation, 2. nasty ByteBuffer fiddle when writing
-
-blog - add section for minimised/closed windows ~ callbacks, recreation
 
 helper for 'wrappers' that are not native objects (i.e. not destroyed) but compose and optionally destroy their dependencies?
 e.g. VertexBuffer, View
@@ -52,6 +48,8 @@ demo
 - solar system
 
 scene
+- picking, rays, etc
+- culling, frustum, custom (e.g. terrain blocks)
 - composite object for near/far plane distances, FOV, projection matrix, i.e. stuff used in scene? or Scene object?
 - node inheritance? e.g. transform change propagates up, volume change down, etc?
 - should volumes enforce intersect(sphere) and intersect(extents)? or ABC? or leave as-is? should frustum really be a volume?
