Added feature framework
Moved VK common to core
Added features to logical device
Device features is now a predicate
Sampler tests anisotropy feature and level

--- a/todo.txt
+++ b/todo.txt
@@ -7,6 +7,10 @@ VkDebugUtilsMessengerCallbackDataEXT
 also injects superfluous padding
 **********
 
+need to recreate depth buffer for new swapchain resolution!
+ditto if we use a MSAA attachment
+=> a more structured recreate mechanism: swapchain, image views, framebuffers, other attachments 
+
 test for RenderTask and SwapchainManager are nasty
 
 blog
