Very rough first-cut
Added none clear value
Swapchain now has format & extents members
Factored out image to separate accessor
Removed swapchain views
Simplifies swapchain manager
Fleshed out new attachment, added skeleton implementation
Added default colour & depth-stencil subclasses
Attachment views and framebuffers also recreated
Added render controller to orchestrate
Bodged mocks throughout

--- a/todo.txt
+++ b/todo.txt
@@ -7,11 +7,23 @@ VkDebugUtilsMessengerCallbackDataEXT
 also injects superfluous padding
 **********
 
+sort out transient/native release()
+
 need to recreate depth buffer for new swapchain resolution!
 ditto if we use a MSAA attachment
 => a more structured recreate mechanism: swapchain, image views, framebuffers, other attachments 
 
+resize handler -> recreate swapchain
+minimised window -> glfwGetFramebufferSize returns 0, glfwWaitEvents() pauses?
+
 test for RenderTask and SwapchainManager are nasty
+
+MSAA
+- render target with > 1 samples, and rasterizer
+- resolve attachment
+- depth ditto
+- usage: transient, colour
+- final layout = colour optimal
 
 blog
 - move mesh load/persist -> model loader chapter
