--- a/todo.txt
+++ b/todo.txt
@@ -7,10 +7,6 @@ VkDebugUtilsMessengerCallbackDataEXT
 also injects superfluous padding
 **********
 
-resize handler -> recreate swapchain => need to re-query surface properties!!!
-also constrain min/max in all cases?
-also sometimes happens when minimised => need to check if w/h are 0?
-
 MSAA
 - render target with > 1 samples, and rasterizer
 - resolve attachment
@@ -31,9 +27,7 @@ mesh loader: 1. still needs custom indexed implementation, 2. nasty ByteBuffer f
 
 interpolation expansion: colours, vector, quaternion, etc?
 
-helper for 'wrappers' that are not native objects (i.e. not destroyed) but compose and optionally destroy their dependencies?
-buffers - VBO, index, resource (uniform), flag on buffer itself, these classes replicate logic? default boolean autoRelease() ?
-View - done
+resize/recreate -> validation errors (argh)
 
 we would want to configure pipeline stage from YAML like files, fluid builder less important (?)
 
